Re added missing rules reqquired for Junit testing, fixed #12 duplicate indeifiers in full record medication statments

--- a/simulator_config/gpconnect_common_responses.conf
+++ b/simulator_config/gpconnect_common_responses.conf
@@ -1,6 +1,11 @@
 #
 # Common fhir/gconnect responses
 #
+# do not delete used for testing
+operation_outcome_400 TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome.xml 400
+operation_outcome_415 TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome.xml 415
+operation_outcome_422 TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome.xml 422
+
 operation_outcome_422_ce TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_ce.xml 422
 #
 patient_not_found_response	TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_pnf.xml 404
@@ -18,7 +23,8 @@ operation_outcome_404 TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outc
 # NB uses generic operation outcome
 #operation_outcome_404 TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome.xml 404 $v = "99"
 # NB uses generic operation outcome
-#operation_outcome_400_reset TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome.xml 400 $v = 
+# do not delete used for testing
+operation_outcome_400_reset TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome.xml 400 $v = 
 #
 operation_outcome_415_invalid_accept TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_invalid_accept.xml 415
 operation_outcome_415_invalid_content_type TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_invalid_content_type.xml 415
