return large json responses as binary internal to overcome 100MB xml parse limit

--- a/simulator_config/fhir_expressions_common.conf
+++ b/simulator_config/fhir_expressions_common.conf
@@ -94,6 +94,9 @@ INVALID_END_DATE	xpathnotmatches /fhir:Parameters/fhir:parameter[fhir:name/@valu
 #
 EMPTY_ACCEPT http_header accept notmatches ^.+$
 # FHIR 3 format
+ACCEPT_JSON http_header accept matches ^.*application\/fhir\+json.*$
+ACCEPT_XML http_header accept matches ^.*application\/fhir\+xml.*$
+
 INVALID_ACCEPT http_header accept notmatches ^.*application\/fhir\+(xml|json).*$
 #
 EMPTY_CONTENT matches ^$
