First cut at SDS fhir adpater Org Resource

--- a/simulator_config/fhir_expressions_common.conf
+++ b/simulator_config/fhir_expressions_common.conf
@@ -97,6 +97,10 @@ EMPTY_ACCEPT http_header accept notmatches ^.+$
 ACCEPT_JSON http_header accept matches ^.*application\/fhir\+json.*$
 ACCEPT_XML http_header accept matches ^.*application\/fhir\+xml.*$
 
+FORMAT_PARAM_JSON context_path matches ^.*\?.*_format=.*json.*(&|$)
+FORMAT_PARAM_XML context_path matches ^.*\?.*_format=.*xml.*(&|$)
+FORMAT_PARAM_EMPTY context_path notmatches ^.*\?.*_format=.*(&|$) 
+
 INVALID_ACCEPT http_header accept notmatches ^.*application\/fhir\+(xml|json).*$
 #
 EMPTY_CONTENT matches ^$
