Fixed #16 requesting_practitioner jwt not mandatory for migrate

--- a/simulator_config/fhir_expressions_common.conf
+++ b/simulator_config/fhir_expressions_common.conf
@@ -117,3 +117,5 @@ EMPTY_NHS_NO	xpathequals string-length(/fhir:Parameters/fhir:parameter[fhir:name
 # hard coded check for the one supplied by the Answer tool needs to do the checksum
 INVALID_NHS_NUMBER xpathequals /fhir:Parameters/fhir:parameter[fhir:name/@value='patientNHSNumber']/fhir:valueIdentifier/fhir:value/@value 1234567891
 PATIENT_COUNT_INVALID xpathequals boolean(count(/fhir:Parameters/fhir:parameter/fhir:name[@value='patientNHSNumber'])>1) true
+
+SSP_INTERACTIONID_IS_MIGRATE http_header Ssp-InteractionID matches ^POST+urn:nhs:names:services:gpconnect:fhir:operation:gpc.migratestructuredrecord-1$
