--- a/simulator_config/fhir_rules_common.conf
+++ b/simulator_config/fhir_rules_common.conf
@@ -17,9 +17,10 @@ IF FHIR and JWT_PAYLOAD_NO_ISS then operation_outcome_400_noiss
 IF FHIR and JWT_PAYLOAD_NO_AUD then operation_outcome_400_noaud
 IF FHIR and JWT_PAYLOAD_NO_SUB then operation_outcome_400_nosub
 IF FHIR and JWT_PAYLOAD_NO_REQUESTED_SCOPE then operation_outcome_400_noscope
+
 IF FHIR and JWT_PAYLOAD_NO_REQUESTING_ORGANIZATION then operation_outcome_400_norqorg
-IF FHIR and JWT_PAYLOAD_NO_REQUESTING_PRACTITIONER then operation_outcome_400_norqprac
-IF FHIR and JWT_PAYLOAD_INVALID_REQUESTING_PRACTITIONER then operation_outcome_422_invrqprac
+IF FHIR and not SSP_INTERACTIONID_IS_MIGRATE and JWT_PAYLOAD_NO_REQUESTING_PRACTITIONER then operation_outcome_400_norqprac
+IF FHIR and not SSP_INTERACTIONID_IS_MIGRATE and JWT_PAYLOAD_INVALID_REQUESTING_PRACTITIONER then operation_outcome_422_invrqprac
 # think this had been removed now
 #IF JWT_PAYLOAD_NO_REQUESTED_RECORD then operation_outcome_400
 # #188 creation time in the future is no longer an error
@@ -36,7 +37,7 @@ IF FHIR and SSP_TO_MISMATCH  then operation_outcome_400_ssptomismatch
 IF FHIR and SSP_FROM_MISSING then operation_outcome_400_sspfrommissing
 IF FHIR and SSP_FROM_INCORRECT  then operation_outcome_400_sspfrominv
 IF FHIR and JWT_HEADER_INVALID then operation_outcome_499_invalid_jwt_header
-IF FHIR and JWT_PAYLOAD_INVALID_REQUESTING_PRACTITIONER_RESOURCE_TYPE then operation_outcome_422_ivprt
+IF FHIR and not SSP_INTERACTIONID_IS_MIGRATE and JWT_PAYLOAD_INVALID_REQUESTING_PRACTITIONER_RESOURCE_TYPE then operation_outcome_422_ivprt
 IF FHIR and JWT_PADDING then operation_outcome_400_pad
 IF FHIR and JWT_NOT_BASE64_URL_ENCODED then operation_outcome_400_jwtnotb64
 IF FHIR and JWT_SIG_PRESENT then operation_outcome_400_jwtsigpresent
