Updated dates and amended content for P22..24

--- a/tkw-x-forwarding.properties
+++ b/tkw-x-forwarding.properties
@@ -61,7 +61,7 @@ tks.HttpTransport.adminlistenport 8001
 tks.httpinterceptor.forwardingaddress 127.0.0.1
 tks.httpinterceptor.forwardingport 5000
 
-# dcokerised
+# dockerised
 #tks.httpinterceptor.forwardingaddress gpconnect-api
 #tks.httpinterceptor.forwardingport 19191
 
