Fix erroenous check for migrate interaction id

--- a/simulator_config/fhir_expressions_common.conf
+++ b/simulator_config/fhir_expressions_common.conf
@@ -118,4 +118,4 @@ EMPTY_NHS_NO	xpathequals string-length(/fhir:Parameters/fhir:parameter[fhir:name
 INVALID_NHS_NUMBER xpathequals /fhir:Parameters/fhir:parameter[fhir:name/@value='patientNHSNumber']/fhir:valueIdentifier/fhir:value/@value 1234567891
 PATIENT_COUNT_INVALID xpathequals boolean(count(/fhir:Parameters/fhir:parameter/fhir:name[@value='patientNHSNumber'])>1) true
 
-SSP_INTERACTIONID_IS_MIGRATE http_header Ssp-InteractionID matches ^POST+urn:nhs:names:services:gpconnect:fhir:operation:gpc.migratestructuredrecord-1$
+SSP_INTERACTIONID_IS_MIGRATE http_header Ssp-InteractionID matches ^urn:nhs:names:services:gpconnect:fhir:operation:gpc.migratestructuredrecord-1$
