--- a/simulator_config/gpconnect_common_responses.conf
+++ b/simulator_config/gpconnect_common_responses.conf
@@ -41,6 +41,7 @@ operation_outcome_400_nnn_mismatch TKW_ROOT/config/GP_CONNECT/simulator_config/o
 operation_outcome_400_multiple_nnn TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_multiple_nnn.xml 400
 operation_outcome_400_ndc TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_ndc.xml 400
 operation_outcome_400_nmig TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_nmig.xml 400
+operation_outcome_400_migmismatch TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_migmismatch.xml 400
 operation_outcome_400_ndcormig TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_ndcormig.xml 400
 operation_outcome_400_pi TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_pi.xml 400
 operation_outcome_400_nrd TKW_ROOT/config/GP_CONNECT/simulator_config/operation_outcomes/operation_outcome_nrd.xml 400
