Fixed Patient scope test change

--- a/simulator_config/fhir_expressions_common.conf
+++ b/simulator_config/fhir_expressions_common.conf
@@ -44,7 +44,7 @@ JWT_EXP_TOO_LATE jwt_payload xpathequals boolean(number(/json:json/@exp) - numbe
 #
 JWT_PAYLOAD_PATIENT_MISMATCH content jwt_payload xpathnotcompare /fhir:Parameters/fhir:parameter[fhir:name/@value='patientNHSNumber']/fhir:valueIdentifier[fhir:system/@value='https://fhir.nhs.uk/Id/nhs-number']/fhir:value/@value /json:json/json:requested_record/json:identifiers/json:identifier[@system='https://fhir.nhs.uk/Id/nhs-number']/@value
 
-JWT_PAYLOAD_REQUESTED_SCOPE_PATIENT jwt_payload xpathmatches /json:json/@requested_scope patient/*.read
+JWT_PAYLOAD_REQUESTED_SCOPE_PATIENT jwt_payload xpathmatches /json:json/@requested_scope ^.*patient/\*.read.*$
 JWT_PAYLOAD_REQUESTED_SCOPE_ORGANIZATION jwt_payload xpathequals /json:json/@requested_scope ^.*organization/\*.read.*$
 JWT_PAYLOAD_REQUESTED_SCOPE_CONFIDENTIAL jwt_payload xpathmatches /json:json/@requested_scope ^.*conf/R.*$
 #
